# popcorn

./: .gitignore
pop-client/: index.html  package-lock.json  package.json  vite.config.ts
pop-client/src/: App.css  App.tsx  Layout.tsx  Page.tsx  main.tsx
pop-client/src/api/: auth.ts
pop-client/src/auth/: Login.tsx  styles.css
pop-client/src/components/: Header.tsx  Links.tsx  Nav.tsx  Routes.tsx
pop-client/src/context/: User.tsx
pop-client/src/hooks/: usePageState.tsx  useProtected.tsx
pop-client/src/pages/: Create.tsx  Login.tsx
popcorn/: Cargo.toml  Rocket.toml  config.toml
popcorn/src/: db.rs  lib.rs  main.rs  server.rs
popcorn/src/db/: mod.rs  models.rs
popcorn/src/server/: lib.rs  mod.rs  routes.rs
popcorn/static/: index.html
popcorn/static/assets/: index-03cbc400.js  index-09fce67c.js  index-1ef7af56.css  index-29d42bcd.js  index-2bc1a94c.js  index-2ede5f07.js  index-3ae34c92.js  index-4bf54432.js  index-5698bf16.js  index-58b3b6cc.js  index-8b45afe9.js  index-8dd15731.js  index-968a62aa.js  index-b3f73f03.js  index-c903555e.js  index-cb28e1b5.css  index-cd13e0a3.js  index-e11e895b.js  index-f828d13a.js
