[package]
name = "popcorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_contrib = { version = "0.5.0-rc.1"}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
tokio = { version = "1", features = ["full"] }
serde_json = "*"
serde = { version = "1.0", features = ["derive"]}
rust-argon2 = "1.0.0"
rand = "*"
dotenv = "*"
